[package]
authors = ["Ephemera Engineering <eng@ephemerahq.com>"]
name = "xmtp-contracts"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/xmtp/contracts-stylus"
repository = "https://github.com/xmtp/contracts-stylus"
keywords = ["xmtp", "arbitrum", "stylus", "smart-contracts"]
description = "XMTP Protocol Contracts for Arbitrum Stylus"

[dependencies]
stylus-sdk = { git = "https://github.com/OffchainLabs/stylus-sdk-rs", tag = "v0.7.0" }
alloy-primitives = { version = "=0.8.14", default-features = false }
alloy-sol-types = { version = "=0.8.14", default-features = false }

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
